# Synthetic-User-Lab

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
.claude/: CLAUDE.md
.claude/agents/: docs-research.md  query-project.md  update-docs.md
.claude/rules/: 代码更新.md  接口规范.md  文档更新.md  文档查询.md  注释说明.md
.claude_introduction/IMAGE/: IMAGE.md
.claude_introduction/TODO/: TODO.md
.claude_introduction/数据流/: 核心数据流.md
.claude_introduction/环境说明/: 常用命令.md  本地开发环境.md
.claude_introduction/项目实现目标/: 目标边界.md  项目目标.md
.claude_introduction/项目文档/: 02-功能模块与API接口.md  06-安全边界与MVP路线图.md
backend/: __init__.py  main.py
backend/ai_api/: __init__.py  model_resolver.py  provider_router.py
backend/analysis/: __init__.py  compare_report.py  friction_analyzer.py  report_builder.py  report_renderer.py  validator.py
backend/api/: __init__.py  router.py
backend/core/: config.py  utils.py
backend/execution/: __init__.py  action_guard.py  (+2 more)
frontend/: index.html  package-lock.json  package.json
scripts/: acceptance_check.py  seed_mvp_samples.py  test_prompt_value_as_messages.py
tests/: conftest.py  test_action_guard.py  test_batch_compare_api.py  test_demo_fixture.py  test_demo_run_api.py  test_entity_store.py  test_failure_recovery.py  test_formal_run_api.py  test_friction_analyzer.py  test_friction_experiments.py  test_knowledge_api.py  test_model_resolver.py  test_mvp_samples.py  test_observer.py  test_persona_api.py  test_playwright_adapter.py  test_postgres_entity_store.py  test_postgres_run_store.py  test_prompt_graph.py  test_report_builder.py  test_report_renderer.py  test_retrieval.py  test_screenshot_api.py  test_settings_api.py  test_sqlite_run_store.py  test_store_factory.py  test_system_config_api.py  test_task_api.py  test_test_site.py  test_validator.py  test_wait_observer.py
(+168 files in other folders)
