[project]
name = "synthetic-user-lab"
version = "0.1.0"
description = "Task-oriented synthetic user testing platform for Web and AI products."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.5",
    "langgraph>=1.0.8",
    "langchain-openai>=1.3.0",
    "langchain-community>=0.4.1",
    # 精确钉版：playwright Python 包版本必须与 Docker 基础镜像内置的浏览器二进制版本一致，
    # 否则 run 时找不到 headless_shell 可执行文件；升版需同步改 Dockerfile 基础镜像 tag。
    "playwright==1.60.0",
    "psycopg[binary,pool]>=3.2.10",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
